--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
 #REACT_APP_BASE_URL=https://groupomania-api-back.herokuapp.com;
-REACT_APP_BASE_URL=http://localhost:5000
-;
+REACT_APP_BASE_URL=http://localhost:5000;
